feat:Finish 70% from homePage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,12 @@ section,
     background-color: rgba(9, 40, 146, 0.12);
     backdrop-filter: blur(32px);
     -webkit-backdrop-filter: blur(32px);
+}
 
+.glassyW {
+    background-color: rgba(255, 255, 255, 0.12);
+    backdrop-filter: blur(32px);
+    -webkit-backdrop-filter: blur(32px);
 }
 
 .boxShadow {
