--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,3 +49,9 @@ section,
 .boxShadow2 {
     box-shadow: 0 0 16px 8px rgba(255, 255, 255, 0.2)
 }
+
+@layer utilities {
+    .gradientBg {
+        background-image: linear-gradient(to right, #43236A 0%, #10278C 20%, #10278C 80%, #43236A 100%);
+    }
+}
