--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,56 @@
     box-sizing: border-box;
 }
 
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-Thin.ttf") format("truetype");
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-ExtraLight.ttf") format("truetype");
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-Light.ttf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-SemiBold.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans Arabic";
+    src: url("/fonts/IBMPlexSansArabic-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+}
+
 body {
     font-family: "IBM Plex Sans Arabic", sans-serif;
     background-color: #F5F7FA
